2/9/23:
-Asset manager window class and ExtraUI created, editorlayer refactoring
-(Physics comp editor added back bodytype changing)
-(Asset management changes - more stable file management)
-(Basic audio integration - needs a lot more work but positional works now)


31/8/23:
-Material drag and drop fix


30/8/23:
-Physics collision callbacks in scripts
-MeshInstanceGroup improper sorting fixed
-/DEBUG linker flag removed when compiling scripts in release 
-Merged physics components back into one class - prevents having to cast everywhere

29/08/23:
-Play/simulate button in editor that saves previous state
-Serialization/project validation changes
-Scripts connected to physics
-Raycasting

26/8/23:
-Basic C++ scripting engine, runtime compilation/connecting of external c++ scripts to entities (currently only msvc supported)
-Split physicscomponent into PhysicsComponentStatic and PhysicsComponentDynamic
-Runtime reloading of scripts
-UI integration with scripts
-UI improvements, error window
-Env map diffuse prefilter serialization for faster loading


22/8/23:
-Concept of projects and project management added
-3D Mesh/material asset previews in editor
-Large UI changes in editor
-Asset management improved, serialized/clone asset files kept with project files
-Fixed some entity/transform hierarchy bugs
-Mesh asset binary serialization
-Some vol. fog changes/fixes


16/8/23:
-Some work on binary asset serialization
-Async mesh/texture loading
-Asset management stuff in its own singleton class, moved out of Scene
-ImGui drag and drop for materials/textures instead of scuffed system


12/8/23:
-Vertex data format changes - loose floats used instead of vectors
-Transform hierarchies fixed
-Improved editor cam controls
-Removed useless editor cam class

9/8/23:
-PhysX GPU support janky fix just copying pre-compiled dlls
-Fixed entity parent/child relationships
-UI improvements for hierarchies, scrolling bug on entities with many children fixed.


7/8/23: