@@ -54,7 +54,8 @@ namespace ORNG {
 	void CameraComponent::MakeActive() {
 		is_active = true;
 		Events::ECS_Event<CameraComponent> update_event;
-		update_event.affected_components.push_back(this);
+		update_event.affected_components[0] = this;
+		update_event.affected_entities[0] = GetEntity();
 		update_event.event_type = Events::ECS_EventType::COMP_UPDATED;
 
 		Events::EventManager::DispatchEvent(update_event);
