@@ -1,0 +1,23 @@
+#include "pch/pch.h"
+#include "components/ComponentSystems.h"
+#include "scene/SceneEntity.h"
+
+namespace ORNG {
+	void TransformHierarchySystem::OnLoad() {
+		// On transform update event, update all child transforms
+		m_transform_event_listener.OnEvent = [this](const Events::ECS_Event<TransformComponent>& t_event) {
+			[[likely]] if (t_event.event_type == Events::ECS_EventType::COMP_UPDATED) {
+				auto* p_relationship_comp = t_event.affected_components[0]->GetEntity()->GetComponent<RelationshipComponent>();
+				entt::entity current_entity = p_relationship_comp->first;
+
+				for (int i = 0; i < p_relationship_comp->num_children; i++) {
+					mp_registry->get<TransformComponent>(current_entity).RebuildMatrix(static_cast<TransformComponent::UpdateType>(t_event.sub_event_type));
+					current_entity = mp_registry->get<RelationshipComponent>(current_entity).next;
+				}
+
+			}
+		};
+		m_transform_event_listener.scene_id = GetSceneUUID();
+		Events::EventManager::RegisterListener(m_transform_event_listener);
+	}
+}
